feat: some fixes

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -24,7 +24,7 @@
       <div class="burger-menu__container">
         <ul class="burger-nav__list">
           <li class="burger-nav__list-item">
-            <a class="burger-nav__link" href="#visiting">
+            <a class="burger-nav__link" href="index.html#visiting">
               <span class="burger-nav__link-text">Visiting</span>
               <svg
                 class="burger-nav__link-arrow"
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="burger-nav__list-item">
-            <a class="burger-nav__link" href="#explore"
+            <a class="burger-nav__link" href="index.html#explore"
               ><span class="burger-nav__link-text">Explore</span>
               <svg
                 class="burger-nav__link-arrow"
@@ -60,7 +60,7 @@
             </a>
           </li>
           <li class="burger-nav__list-item">
-            <a class="burger-nav__link" href="#video"
+            <a class="burger-nav__link" href="index.html#video"
               ><span class="burger-nav__link-text">Video</span>
               <svg
                 class="burger-nav__link-arrow"
@@ -78,7 +78,7 @@
             </a>
           </li>
           <li class="burger-nav__list-item">
-            <a class="burger-nav__link" href="#gallery"
+            <a class="burger-nav__link" href="index.html#gallery"
               ><span class="burger-nav__link-text">Gallery</span>
               <svg
                 class="burger-nav__link-arrow"
@@ -96,7 +96,7 @@
             </a>
           </li>
           <li class="burger-nav__list-item">
-            <a class="burger-nav__link" href="#tickets"
+            <a class="burger-nav__link" href="index.html#tickets"
               ><span class="burger-nav__link-text">Tickets</span>
               <svg
                 class="burger-nav__link-arrow"
@@ -114,7 +114,7 @@
             </a>
           </li>
           <li class="burger-nav__list-item">
-            <a class="burger-nav__link" href="#contacts"
+            <a class="burger-nav__link" href="index.html#contacts"
               ><span class="burger-nav__link-text">Contacts</span>
               <svg
                 class="burger-nav__link-arrow"
