--- a/src/html/includes/main/gallery.html
+++ b/src/html/includes/main/gallery.html
@@ -1,27 +1,102 @@
 <section id="gallery" class="gallery">
   <div class="gallery__container section-container">
     <h2 class="gallery__title title">Art Gallery</h2>
-    <div class="gallery__body">
-      <div class="body__column">
-        <img class="body__column-image" src="./img/gallery/galery1.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery12.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery3.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery4.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery5.webp" alt="" loading="lazy" />
+    <div class="gallery-body">
+      <div class="gallery-body__column">
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery1.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery12.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery3.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery4.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery5.webp"
+          alt=""
+          loading="lazy"
+        />
       </div>
-      <div class="body__column">
-        <img class="body__column-image" src="./img/gallery/galery6.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery7.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery13.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery9.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery10.webp" alt="" loading="lazy" />
+      <div class="gallery-body__column">
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery6.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery7.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery13.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery9.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery10.webp"
+          alt=""
+          loading="lazy"
+        />
       </div>
-      <div class="body__column">
-        <img class="body__column-image" src="./img/gallery/galery11.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery2.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery8.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery14.webp" alt="" loading="lazy" />
-        <img class="body__column-image" src="./img/gallery/galery15.webp" alt="" loading="lazy" />
+      <div class="gallery-body__column">
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery11.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery2.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery8.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery14.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="gallery-body__column-image"
+          src="./img/gallery/galery15.webp"
+          alt=""
+          loading="lazy"
+        />
       </div>
     </div>
   </div>
