--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -12,7 +12,7 @@
         class="journey-player__video"
         muted
         poster="./img/journey/poster0.webp"
-        src="./uploads/journey.mp4"
+        src="./video/journey.mp4"
       ></video>
       <button class="journey-player__main-play-btn">
         <svg
@@ -34,9 +34,9 @@
         </svg>
       </button>
       <div class="journey-player__navbar">
-        <button class="navbar__play-btn">
+        <button class="journey-player__play-btn">
           <svg
-            class="play-icon"
+            class="journey-player__play-icon"
             fill="none"
             height="31"
             viewBox="0 0 23 31"
@@ -46,10 +46,10 @@
             <path d="M23 15.5053L0 0C0 23.3683 0 11.8996 0 31L23 15.5053Z" fill="#B3B3B3" />
           </svg>
         </button>
-        <input class="navbar__play-bar" type="range" />
-        <button class="navbar__volume-btn">
+        <input class="journey-player__play-bar" type="range" max="100" min="0" value="0" />
+        <button class="journey-player__volume-btn">
           <svg
-            class="volume-icon"
+            class="journey-player__volume-icon"
             fill="none"
             height="31"
             viewBox="0 0 38 31"
@@ -70,10 +70,10 @@
             />
           </svg>
         </button>
-        <input class="navbar__volume-bar" type="range" />
-        <button class="navbar__fullscreen-btn">
+        <input class="journey-player__volume-bar" type="range" max="100" min="0" value="20" />
+        <button class="journey-player__fullscreen-btn">
           <svg
-            class="fullscreen-icon"
+            class="journey-player__fullscreen-icon"
             fill="none"
             height="35"
             viewBox="0 0 35 35"
@@ -93,8 +93,8 @@
     </div>
     <div class="journey-slider">
       <div class="journey-slider-inner swiper">
-        <div class="video-list swiper-wrapper">
-          <div class="video-list__item swiper-slide">
+        <div class="journey-slider__videos swiper-wrapper">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -104,7 +104,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -114,7 +114,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -124,7 +124,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -134,7 +134,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -144,7 +144,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -154,7 +154,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -164,7 +164,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -174,7 +174,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
@@ -184,7 +184,7 @@
               width="380"
             ></iframe>
           </div>
-          <div class="video-list__item swiper-slide">
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
