--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -26,6 +26,7 @@
 @import "sections/main/gallery";
 @import "sections/main/tickets/tickets";
 @import "sections/main/tickets/form";
+@import "sections/main/tickets/form---overview";
 @import "sections/main/parallax";
 @import "sections/main/contacts";
 //User page
