--- a/src/scss/sections/main/_explore.scss
+++ b/src/scss/sections/main/_explore.scss
@@ -66,52 +66,47 @@
     font-size: 16px;
     text-align: center;
   }
-}
-
-.explore-left {
-  @include media-breakpoint-up(xl) {
-    max-width: 695px;
-  }
-  @include media-breakpoint-down(xl) {
-    max-width: 100%;
-  }
-  &__title-text {
-    color: var(--palette-primary-text);
-  }
-  &__desc {
-    gap: 25px;
-    @include media-breakpoint-up(xxl) {
-      margin-top: 75px;
-    }
-    @include media-breakpoint-down(xxl) {
-      margin-top: 60px;
-    }
-    @include media-breakpoint-up(lg) {
-      display: grid;
-    }
-    @include media-breakpoint-down(lg) {
-      display: none;
-    }
-  }
-  &__desc-text {
-    font-weight: var(--typography-fontWeightLight);
-    line-height: 38px;
-    color: var(--palette-primary-text);
-    @include media-breakpoint-up(xxl) {
-      font-size: 22px;
-    }
-    @include media-breakpoint-between(xl, xxl) {
-      font-size: 18px;
+  &-left {
+    @include media-breakpoint-up(xl) {
+      max-width: 695px;
     }
     @include media-breakpoint-down(xl) {
-      font-size: 20px;
-      &:last-child {
+      max-width: 100%;
+    }
+    &__title-text {
+      color: var(--palette-primary-text);
+    }
+    &__desc {
+      gap: 25px;
+      @include media-breakpoint-up(xxl) {
+        margin-top: 75px;
+      }
+      @include media-breakpoint-down(xxl) {
+        margin-top: 60px;
+      }
+      @include media-breakpoint-up(lg) {
+        display: grid;
+      }
+      @include media-breakpoint-down(lg) {
         display: none;
       }
     }
+    &__desc-text {
+      font-weight: var(--typography-fontWeightLight);
+      line-height: 38px;
+      color: var(--palette-primary-text);
+      @include media-breakpoint-up(xxl) {
+        font-size: 22px;
+      }
+      @include media-breakpoint-between(xl, xxl) {
+        font-size: 18px;
+      }
+      @include media-breakpoint-down(xl) {
+        font-size: 20px;
+        &:last-child {
+          display: none;
+        }
+      }
+    }
   }
-}
-
-.text-marker {
-  color: var(--palette-tertiary-text);
 }
