--- a/src/scss/sections/main/_gallery.scss
+++ b/src/scss/sections/main/_gallery.scss
@@ -17,7 +17,7 @@
   &__title {
     color: var(--palette-primary-text);
   }
-  &__body {
+  &-body {
     overflow-y: scroll;
     display: flex;
     justify-content: center;
@@ -43,26 +43,23 @@
     @include media-breakpoint-down(lg) {
       gap: 24px;
     }
-  }
-}
-
-.body {
-  &__column {
-    display: grid;
-    gap: 24px;
-    width: 50%;
-    @include media-breakpoint-down(xl) {
+    &__column {
+      display: grid;
+      gap: 24px;
+      width: 50%;
+      @include media-breakpoint-down(xl) {
+        &:last-child {
+          display: none;
+        }
+      }
+      &:first-child,
       &:last-child {
-        display: none;
+        margin-top: 50px;
       }
     }
-    &:first-child,
-    &:last-child {
-      margin-top: 50px;
+    &__column-image {
+      width: 100%;
+      object-fit: cover;
     }
-  }
-  &__column-image {
-    width: 100%;
-    object-fit: cover;
   }
 }
