--- a/src/scss/sections/main/_journey.scss
+++ b/src/scss/sections/main/_journey.scss
@@ -4,227 +4,248 @@
   &__title {
     color: var(--palette-tertiary-text);
   }
-}
-
-.journey-heading {
-  display: flex;
-  gap: 60px;
-  &__desc-text {
-    font-weight: var(--typography-fontWeightLight);
-    font-size: 22px;
-    line-height: 38px;
-    color: var(--palette-secondary-text);
-    @include media-breakpoint-down(xxl) {
-      display: none;
-    }
-  }
-}
-
-.journey-player {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  @include media-breakpoint-up(xl) {
-    margin-top: 75px;
-  }
-  @include media-breakpoint-between(lg, xl) {
-    margin-top: 60px;
-  }
-  @include media-breakpoint-between(sm, lg) {
-    margin-top: 40px;
-  }
-  @include media-breakpoint-down(sm) {
-    margin-top: 36px;
-  }
-  &__video {
-    position: relative;
-    max-width: 1440px;
-    max-height: 650px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  &-heading {
     display: flex;
-  }
-  &__main-play-btn {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-    cursor: pointer;
-    transition-duration: 0.3s;
-    &:not(:hover) {
-      filter: brightness(1);
-    }
-    &:hover {
-      filter: brightness(0.7);
-    }
-  }
-  &__main-play-icon {
-    @include media-breakpoint-between(lg, xxl) {
-      width: 152px;
-      height: 152px;
-    }
-    @include media-breakpoint-between(sm, lg) {
-      width: 80px;
-      height: 80px;
-    }
-    @include media-breakpoint-down(sm) {
-      width: 50px;
-      height: 50px;
-    }
-  }
-  &__navbar {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--palette-primary-main);
-    z-index: 2;
-    @include media-breakpoint-up(lg) {
-      padding: 27px 30px;
-      gap: 10px;
-    }
-    @include media-breakpoint-between(sm, lg) {
-      padding: 10px 20px;
-      gap: 5px;
-    }
-    @include media-breakpoint-down(sm) {
-      padding: 5px;
-    }
-  }
-}
-
-.navbar {
-  &__fullscreen-btn,
-  &__volume-btn,
-  &__play-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    transition: 0.3s;
-    @include media-breakpoint-up(xl) {
-      padding: 10px;
-    }
-    @include media-breakpoint-down(xl) {
-      padding: 5px;
-    }
-    &:not(:hover) {
-      filter: brightness(1);
-    }
-    &:hover {
-      filter: brightness(0.5);
-    }
-  }
-  &__play-bar,
-  &__volume-bar {
-    width: 100%;
-    cursor: pointer;
-    @include media-breakpoint-up(md) {
-      height: 15px;
-    }
-    @include media-breakpoint-between(sm, md) {
-      height: 5px;
-    }
-    @include media-breakpoint-down(sm) {
-      height: 3px;
-    }
-  }
-  &__play-bar {
-    min-width: 100px;
-  }
-  &__volume-bar {
-    max-width: 200px;
-    min-width: 80px;
-  }
-}
-
-.play-icon,
-.volume-icon,
-.fullscreen-icon {
-  width: 100%;
-  height: 100%;
-  min-width: 10px;
-}
-
-.journey-slider {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  margin-top: 75px;
-  &__btn-prev,
-  &__btn-next {
-    cursor: pointer;
-    padding: 10px;
-    transition-duration: 0.3s;
-    &:not(:hover) {
-      filter: brightness(1);
-    }
-    &:hover {
-      filter: brightness(0.5);
-    }
-    &:not(:active) {
-      transform: scale(1);
-    }
-    &:active {
-      transform: scale(1.2);
-    }
-  }
-  &__nav {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-  }
-  &__pagination {
-    display: flex;
-    @include media-breakpoint-up(sm) {
-      gap: 20px;
-    }
-    @include media-breakpoint-down(sm) {
-      gap: 10px;
-    }
-    .swiper-pagination-bullet {
-      width: 12px;
-      height: 12px;
-      background-color: var(--palette-tertiary-light);
-      border-radius: 50%;
-      cursor: pointer;
-      transition-duration: 0.3s;
-      &:hover {
-        box-shadow: var(--shadows-1);
+    gap: 60px;
+    &__desc-text {
+      font-weight: var(--typography-fontWeightLight);
+      font-size: 22px;
+      line-height: 38px;
+      color: var(--palette-secondary-text);
+      @include media-breakpoint-down(xxl) {
+        display: none;
       }
     }
-    .swiper-pagination-bullet-active {
+  }
+  &-player {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    @include media-breakpoint-up(xl) {
+      margin-top: 75px;
+    }
+    @include media-breakpoint-between(lg, xl) {
+      margin-top: 60px;
+    }
+    @include media-breakpoint-between(sm, lg) {
+      margin-top: 40px;
+    }
+    @include media-breakpoint-down(sm) {
+      margin-top: 36px;
+    }
+    &__video {
+      position: relative;
+      max-width: 1440px;
+      max-height: 650px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: flex;
+    }
+    &__main-play-btn {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: transparent;
+      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1;
+      cursor: pointer;
+      transition-duration: 0.3s;
+      &:not(:hover) {
+        filter: brightness(1);
+      }
+      &:hover {
+        filter: brightness(0.7);
+      }
+    }
+    &__main-play-icon {
+      @include media-breakpoint-between(lg, xxl) {
+        width: 152px;
+        height: 152px;
+      }
+      @include media-breakpoint-between(sm, lg) {
+        width: 80px;
+        height: 80px;
+      }
+      @include media-breakpoint-down(sm) {
+        width: 50px;
+        height: 50px;
+      }
+    }
+    &__navbar {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
       background-color: var(--palette-primary-main);
+      z-index: 2;
+      @include media-breakpoint-up(lg) {
+        padding: 27px 30px;
+        gap: 10px;
+      }
+      @include media-breakpoint-between(sm, lg) {
+        padding: 10px 20px;
+        gap: 5px;
+      }
+      @include media-breakpoint-down(sm) {
+        padding: 5px;
+      }
+    }
+    &__fullscreen-btn,
+    &__volume-btn,
+    &__play-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      transition: 0.3s;
+      @include media-breakpoint-up(xl) {
+        padding: 10px;
+      }
+      @include media-breakpoint-down(xl) {
+        padding: 5px;
+      }
+      &:not(:hover) {
+        filter: brightness(1);
+      }
+      &:hover {
+        filter: brightness(0.5);
+      }
+    }
+    &__play-bar,
+    &__volume-bar {
+      width: 100%;
+      cursor: pointer;
+
+      @include media-breakpoint-up(md) {
+        height: 15px;
+      }
+      @include media-breakpoint-between(sm, md) {
+        height: 5px;
+      }
+      @include media-breakpoint-down(sm) {
+        height: 3px;
+      }
+      &:hover {
+        &::-webkit-slider-thumb {
+          filter: brightness(0.5);
+        }
+      }
+
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        background-color: var(--palette-primary-dark);
+        border-radius: 15px;
+        transition-duration: 0.3s;
+        @include media-breakpoint-up(md) {
+          width: 15px;
+          height: 15px;
+        }
+        @include media-breakpoint-between(sm, md) {
+          width: 5px;
+          height: 5px;
+        }
+        @include media-breakpoint-down(sm) {
+          width: 3px;
+          height: 3px;
+        }
+      }
+      &::-webkit-slider-runnable-track {
+        -webkit-appearance: none;
+        background-color: var(--palette-primary-light);
+        border-radius: 15px;
+      }
+    }
+    &__play-bar {
+      min-width: 100px;
+    }
+    &__volume-bar {
+      max-width: 200px;
+      min-width: 80px;
+    }
+    &__play-icon,
+    &__volume-icon,
+    &__fullscreen-icon {
+      width: 100%;
+      height: 100%;
+      min-width: 10px;
     }
   }
-}
-
-.journey-slider-inner {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: 1;
-}
-
-.video-list {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  &__item {
+  &-slider {
+    width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 20px;
+    margin-top: 75px;
+    &__btn-prev,
+    &__btn-next {
+      cursor: pointer;
+      padding: 10px;
+      transition-duration: 0.3s;
+      &:not(:hover) {
+        filter: brightness(1);
+      }
+      &:hover {
+        filter: brightness(0.5);
+      }
+      &:not(:active) {
+        transform: scale(1);
+      }
+      &:active {
+        transform: scale(1.2);
+      }
+    }
+    &__nav {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+    }
+    &__pagination {
+      display: flex;
+      @include media-breakpoint-up(sm) {
+        gap: 20px;
+      }
+      @include media-breakpoint-down(sm) {
+        gap: 10px;
+      }
+      .swiper-pagination-bullet {
+        width: 12px;
+        height: 12px;
+        background-color: var(--palette-tertiary-light);
+        border-radius: 50%;
+        cursor: pointer;
+        transition-duration: 0.3s;
+        &:hover {
+          box-shadow: var(--shadows-1);
+        }
+      }
+      .swiper-pagination-bullet-active {
+        background-color: var(--palette-primary-main);
+      }
+    }
+    &-inner {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 1;
+    }
+    &__videos {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+    &__videos-item {
+      display: flex;
+      align-items: center;
+    }
   }
 }
